--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <div class="box">
                         <img src="images/Cosmos.jpeg" alt="">
                     <div class="text">Cosmos 2</div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
 
@@ -218,7 +218,7 @@
                     <div class="box">
                         <img src="images/Cosmos3.jpeg" alt="">
                     <div class="text">Cosmos 3</div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
 
