--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                     <p><span class="strengths">Strengths:</span> Extremely goal oriented worker, incredibly efficient. Worked in incredibly high pressure and very fast paced environment for the past 11 years. Risk taker; Not afraid to fail and start over with no hesitation; Calm and productive under pressure. Able to create a workplace culture that inspires and motivates others. Confident and very hands on; Does whatever it takes to always deliver quality.</p><br>
                         
                         <p><span class="strengths">Skills:</span> Very creative and an incredibly fast learner. Adaptable; Decisive; Effective Problem solver. Insightful listener; High level of emotional intelligence.</p>
-                        <img src="images/Skillz.png" alt="">
+                        <div class="avatar">
+                            <img src="images/Skillz.png" alt="">
+                        </div>
                     <!-- <a href="#">Read More</a> -->
                 </div>
                 <div class="column right">
@@ -238,7 +240,7 @@
                 <div class="card">
                     <a href="https://jaimedavid01.github.io/react-hooks-practice-sushi-saga/">
                     <div class="box">
-                            <img class="CC" src="images/CC1.png" alt="">
+                            <img class="CC avatar" src="images/CC1.png" alt="">
                         <div class="text">Sushi Saga</div>
                         <p>Recieve data from a database to render sushi continuously then visualize a sushi purchasing experience.</p>
                     </div>
@@ -249,7 +251,7 @@
                 <div class="card">
                     <a href="https://jaimedavid01.github.io/react-hooks-mock-code-challenge-plantshop/">
                     <div class="box">
-                            <img class="CC" src="images/CC3.png" alt="">
+                            <img class="CC avatar" src="images/CC3.png" alt="">
                         <div class="text">Plantsy</div>
                         <p>Get and post data to render from a database then build out an online plant store with all the features for the admin side.</p>
                     </div>
@@ -259,7 +261,7 @@
                 <div class="card">
                     <a href="https://jaimedavid01.github.io/react-hooks-practice-pokemon-searcher/">
                     <div class="box">
-                            <img class="CC" src="images/CC4.png" alt="">
+                            <img class="CC avatar" src="images/CC4.png" alt="">
                         <div class="text">Pokemon Searcher</div>
                         <p>Get and post data to render from a database then allow user to use a search feature that narrow's down data by the Pokemon's name.</p>
                     </div>
