--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         ( Jaime.r.david01@gmail.com ) 
                         </span>
                     </p>
-                <a href="./JAIME-DAVID-RESUME.pdf" target="_blank" class="href">Download CV</a>
+                <a href="./JaimeDavid_Resume.pdf" target="_blank" class="href">Download CV</a>
             </div>
             </div>
         </div>
@@ -177,52 +177,58 @@
             <h2 class="title">My Projects</h2>
             <div class="carousel owl-carousel">
 
+            
                 <div class="card">
                     <div class="box">
-                        <a href="https://clone-eaa45.web.app">
-                         <img src="images/amafinal.jpeg" alt="">
-                        </a>
-                    <div class="text">A(ME)ZON</div>
-                    <p class="amezon">A fully functioning ‘Amazon.com’ e-commerce website clone made with “Stripe” e-commerce for back end. </p>
+                        <img src="images/amafinal.jpeg" alt="">
+                        <div class="text">A(ME)ZON</div>
+                        <p><a class="demo" href="https://youtu.be/c1ImT59yRRI">[Demo Video] | </a><a class="demo" href="https://clone-eaa45.web.app">[View Project]</a></p>
+                        <p class="amezon">A fully functioning ‘Amazon.com’ e-commerce website clone made with “Stripe” e-commerce for back end. </p>
                         <p class="tech"> React / FireBase / Javascript / HTML / CSS / Stripe / FireBase Auth .</p>
                     </div>
                 </div>
+
 
                 <div class="card">
                     <div class="box">
                         <img src="images/Moody2.jpg" alt="">
                     <div class="text">Moody</div>
+                    <p><a class="demo" href="https://youtu.be/4uHlgp3kgcA">[Demo Video] | </a><a class="demo" href="https://youtu.be/4uHlgp3kgcA">[Still In Progress]</a></p>
                     <p class="moody">A  mobile chat app that bridges the gap between plain text messages and the emotion behind messages by labeling / color coding each message bubble.</p>
-                    <p class="tech"> ReactNative Expo / FireBase / FireBaseAuth .
-                        </p>
+                    <p class="tech"> ReactNative Expo / FireBase / FireBaseAuth .</p>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="box">
+                        <img src="images/Meflixlogo.jpg" alt="">
+                        <div class="text">(ME)flix</div>
+                       <p><a class="demo" href="https://youtu.be/B0XbZaCvVLw">[Demo Video] | </a><a class="demo" href="https://meflix-52ab5.web.app/">[View Project]</a></p>
+                    <p class="meflix">A static homepage that fetches data from TMDB movies API and renders it with my recreation of the "Netflix" front end design.</p>
+                    <p class="tech"> React / FireBase / Javascript / HTML / CSS .</p>
+                    </div>
+                </div>     
+
+
+                <div class="card">
+                    <div class="box">
                         <img src="images/Logo1.jpg" alt="">
                     <div class="text">WDYW?</div>
+                    <p class="demo">[Still In Progress]</p>
                     <p class="wdyw">It helps two users pick a restaurant from a list of restaurants near them using a swipe matching feature like dating apps.  
                         </p>
                         <p class="tech">React / Ruby On Rails / Javascript / HTML / CSS .</p>
                     </div>
                 </div>
 
-                <div class="card">
-                    <div class="box">
-                        <img src="images/Cosmos.jpeg" alt="">
-                    <div class="text">Cosmos 2</div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
 
-                <div class="card">
+                <!-- <div class="card">
                     <div class="box">
                         <img src="images/Cosmos3.jpeg" alt="">
                     <div class="text">Cosmos 3</div>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
-                </div>
+                </div> -->
 
 
             </div>
